# football

./: .env.bs_extraction_example  .env.example  .gitignore  ARCHITECTURE.txt  BS_EXTRACTION_SUMMARY.md  CHANGES_SUMMARY.md  CONTEXT_MODELS.md  IMPLEMENTATION_COMPLETE.md  Makefile  QUICKSTART.md  QUICKSTART_BS_EXTRACTION.md  README.md  THROTTLING_CHEATSHEET.md  TOKENFIX.md  VALUATION_DASHBOARD.md  VLLM_THROTTLING.md  dashboard.py  player_valuations.code-workspace  pyproject.toml  requirements.txt  sliding_window_demo.py
graph_builder/: __init__.py  graph.py  ingest.py  league_tier_mapper.py  llm_normalizer.py  transition_analyzer.py  transition_stats_loader.py
player_valuations/: README.md  config.yaml  main.py  pyproject.toml
player_valuations/out_custom/: report.md  results.csv
player_valuations/tests/: test_config_loader.py  test_config_schema.py  test_data_sources.py  test_dynamics.py  test_metrics.py  test_regimes.py  test_simulator.py
player_valuations/valuation_pathways/: __init__.py  cli.py
player_valuations/valuation_pathways/calibration/: __init__.py
player_valuations/valuation_pathways/config/: loader.py  schema.py
player_valuations/valuation_pathways/data/: __init__.py  interfaces.py
player_valuations/valuation_pathways/data/sources/: __init__.py  synthetic_source.py
player_valuations/valuation_pathways/engine/: __init__.py  metrics.py  simulator.py
player_valuations/valuation_pathways/model/: __init__.py  dynamics.py  interfaces.py  regimes.py
player_valuations/valuation_pathways/report/: __init__.py  artifacts.py
scraper/: __init__.py  (+5 more)
(+47 files in other folders)
