[project]
name = "football"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.5.8",
    "aiodns>=4.0.0",
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "networkx>=3.6.1",
    "openai>=2.17.0",
    "pandas>=2.3.3",
    "player-valuations",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "streamlit>=1.54.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "vllm>=0.15.1; sys_platform != 'darwin'",
]

[tool.uv.workspace]
members = [
    "player_valuations",
]

[tool.uv.sources]
player-valuations = { workspace = true }
